--- a/gulpDemo/package.json
+++ b/gulpDemo/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
-    "gulp-cssnano": "^2.1.3"
+    "gulp-cssnano": "^2.1.3",
+    "gulp-uglify": "^3.0.0"
   }
 }
