--- a/gulpDemo/package.json
+++ b/gulpDemo/package.json
@@ -12,6 +12,7 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^4.1.0",
     "gulp-uglify": "^3.0.0"
   }
 }
