--- a/模块化/example/package.json
+++ b/模块化/example/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development",
+    "watch": "webpack --watch",
     "build": "webpack --mode production"
   },
   "keywords": [],
