--- a/模块化/example/package.json
+++ b/模块化/example/package.json
@@ -6,6 +6,7 @@
   "dependencies": {},
   "devDependencies": {
     "css-loader": "^0.28.11",
+    "html-webpack-plugin": "^3.2.0",
     "jquery": "^2.1.4",
     "node-sass": "^4.8.3",
     "sass-loader": "^6.0.7",
