--- a/模块化/example/package.json
+++ b/模块化/example/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production",
     "dev": "webpack --mode development"
   },
   "keywords": [],
